# copilot-cli-history-v2

./: .gitignore  AGENTS.md  Dockerfile.backend  README.md  docker-compose.debug.yml  docker-compose.yml
backend/: Dockerfile  README.md  manage.py  pyproject.toml
backend/app/models/: copilot_session.rb
backend/backend_config/: asgi.py  settings.py  urls.py  wsgi.py
backend/copilot_history/: __init__.py  catalog_reader.py  current_reader.py  event_normalizer.py  legacy_reader.py  projections.py  root_resolver.py  source_catalog.py  types.py
backend/copilot_history/api/: __init__.py  response_projection.py  types.py
backend/db/: schema.rb
backend/db/migrate/: 20260509001400_add_search_text_to_copilot_sessions.rb  20260509093000_add_search_text_version_to_copilot_sessions.rb
backend/health/: views.py
backend/history_api/: __init__.py  apps.py  cors.py  dependencies.py  query_validation.py  responses.py  services.py  sync_rows.py  urls.py  views.py
backend/history_read_model/: __init__.py  apps.py  bigquery_errors.py  bigquery_repository.py  bigquery_schema.py  bigquery_settings.py  bigquery_sql.py  ddl.py  fake_repository.py  metadata_comparator.py  repository.py  repository_rows.py  repository_write_planner.py
backend/lib/copilot_history/: current_session_reader.rb
backend/spec/contracts/: api_contract_fixtures_spec.rb
backend/spec/db/: history_read_model_persistence_spec.rb  history_read_model_schema_spec.rb
backend/spec/models/: copilot_session_spec.rb  (+1 more)
backend/tests/: test_django_project_foundation.py  test_health_endpoint.py
(+277 files in other folders)
